change color & design to fit with web theme #40

--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
     <div class="row gx-0">
       <div class="col-lg-6 d-flex align-items-center" data-aos="zoom-out" data-aos-delay="200">
         <div class="static-image">
-          <img src="assets/img/issue/3.png" class="img-fluid" alt="">
+          <img src="assets/img/issue/problem-1.jpg" class="img-fluid" alt="">
         </div>
       </div>
 
@@ -348,192 +348,7 @@
         </div>
     
     </div>
-  </section>
-
-  <!-- ======= Solution Section Chris======= -->
-  <section id="chris-sol">
-    <div class="container" data-aos="fade-up">
-
-      <div class="row">
-
-        <div class="col-lg-12 offset-lg-0">
-          <div class="section-header">
-            <!-- <h3 class="section-title"></h3> -->
-            <h2>Solutions</h2>
-            <p>Our Solutions</p>
-            <hr>
-            <span class="section-divider"></span>
-          </div>
-        </div>
-
-        <!-- <div class="col-lg-4 col-md-5 features-img">
-          <img src="assets/img/solution-pic.png" alt="" data-aos="fade-right" class="img-fluid">
-        </div> -->
-
-        <div class="col-lg-12 col-md-12 ">
-
-          <div class="row">
-
-            <div class="col-lg-6 col-md-6 box" data-aos="fade-up">
-              <div class="icon"><i class="bi bi-clipboard2-data"></i></div>
-              <h4 class="title"><a href="">Efficient Tracking</a></h4>
-              <p class="description">
-                <i class="bi bi-dot"></i>Automate attendance tracking using biometric or RFID technology to reduce errors and increase efficiency.<br>
-                <br><i class="bi bi-dot"></i>Provide employees with training on how to use the attendance tracking system correctly to minimize errors. <br>
-                <br><i class="bi bi-dot"></i>Offer an analytics module that identifies patterns and trends in attendance data, allowing for quick identification and resolution of any discrepancies. 
-                </p>
-            </div>
-            <div class="col-lg-6 col-md-6 box" data-aos="fade-up">
-              <div class="icon"><i class="bi bi-lock-fill"></i></div>
-              <h4 class="title"><a href="">Access Control</a></h4>
-              <p class="description">
-                <i class="bi bi-dot"></i>Utilize a secure login system with strong password requirements to ensure only authorized personnel can access the attendance tracking system.<br>
-                <br><i class="bi bi-dot"></i>Implement role-based access control to restrict access to sensitive data based on job roles and responsibilities. <br>
-                <br><i class="bi bi-dot"></i>Utilize encryption to secure attendance data both in transit and at rest to protect against unauthorized access.<br>
-              
-              </p>
-            </div>
-            <div class="col-lg-6 col-md-6 box" data-aos="fade-up" dat-aos-delay="100">
-              <div class="icon"><i class="bi bi-clock-fill"></i></div>
-              <h4 class="title"><a href="">Real-time Tracking</a></h4>
-              <p class="description">
-                <i class="bi bi-dot"></i>Provide automated notifications to remind employees of their upcoming shift and encourage timely arrival.<br>
-                <br><i class="bi bi-dot"></i>Use GPS tracking or location-based services to detect when an employee is late and automatically update the attendance record.<br>
-                <br><i class="bi bi-dot"></i>Give managers real-time access to attendance data so they can address tardiness issues promptly.<br>
-             </p>
-            </div>
-            <div class="col-lg-6 col-md-6 box" data-aos="fade-up" data-aos-delay="100">
-              <div class="icon"><i class="bi bi-bar-chart-line"></i></div>
-              <h4 class="title"><a href="">Data Analytics</a></h4>
-              <p class="description">
-                <i class="bi bi-dot"></i>Provide a dashboard that allows managers to monitor attendance data and analytics in real-time, helping them identify trends and patterns.<br>
-                <br><i class="bi bi-dot"></i>Utilize machine learning algorithms to predict attendance patterns and identify potential issues before they become a problem.<br>
-                <br><i class="bi bi-dot"></i>Offer customizable reports and dashboards that enable managers to analyze attendance data and gain insights into specific areas of interest.<br>
-              </p>
-            </div>
-          </div>
-
-        </div>
-
-      </div>
-
-    </div>
-
-  </section><!-- End Featuress Section -->
-
-    <!-- Service Start Chris Solution 2.0 -->
-    <div class="container chris-sol-2 py-5">
-      <div class="container">
-          <div class="text-center mx-auto wow fadeInUp" data-wow-delay="0.1s">
-            <h2>Solutions</h2>
-            <p>Our Solutions</p>
-            <hr>
-          </div>
-          <div class="row g-4 wow fadeInUp" data-wow-delay="0.3s">
-              <div class="col-lg-4">
-                  <div class="nav nav-pills d-flex justify-content-between w-100 h-100 me-4">
-                      <button class="nav-link w-100 d-flex align-items-center text-start border p-4 mb-4 active"
-                          data-bs-toggle="pill" data-bs-target="#tab-pane-1" type="button">
-                          <h5 class="m-0"><i class="fa fa-bars text-primary me-3"><i class="bi bi-bar-chart-line"></i></i>Efficient Tracking</h5>
-                      </button>
-                      <button class="nav-link w-100 d-flex align-items-center text-start border p-4 mb-4"
-                          data-bs-toggle="pill" data-bs-target="#tab-pane-2" type="button">
-                          <h5 class="m-0"><i class="fa fa-bars text-primary me-3"><i class="bi bi-lock-fill"></i></i>Access Control</h5>
-                      </button>
-                      <button class="nav-link w-100 d-flex align-items-center text-start border p-4 mb-4"
-                          data-bs-toggle="pill" data-bs-target="#tab-pane-3" type="button">
-                          <h5 class="m-0"><i class="fa fa-bars text-primary me-3"><i class="bi bi-clock-fill"></i></i>Real-time Tracking</h5>
-                      </button>
-                      <button class="nav-link w-100 d-flex align-items-center text-start border p-4 mb-0"
-                          data-bs-toggle="pill" data-bs-target="#tab-pane-4" type="button">
-                          <h5 class="m-0"><i class="fa fa-bars text-primary me-3"><i class="bi bi-bar-chart-line"></i></i>Data Analytics</h5>
-                      </button>
-                  </div>
-              </div>
-              <div class="col-lg-8 desc-chris-sol-2">
-                  <div class="tab-content w-100">
-                      <div class="tab-pane fade show active" id="tab-pane-1">
-                          <div class="row g-4">
-                            <!-- <div class="col-md-6" style="min-height: 350px;">
-                              <div class="position-relative h-100">
-                                  <img class="position-absolute rounded w-100 h-100" src="assets/img/solution-pic.png"
-                                      style="object-fit: cover;" alt="">
-                                </div>
-                            </div> -->
-                              <div class="col-md-12">
-                                 <h4 class="title"><a href="">Efficient Tracking</a></h4>
-                                 <div class="description active" id="efficient-tracking">
-                                    <br><div class="icon"><i class="bi bi-check-circle-fill"></i> Automate attendance tracking using biometric or RFID technology to reduce errors and increase efficiency.</div>
-                                    <br><div class="icon"><i class="bi bi-check-circle-fill"></i> Provide employees with training on how to use the attendance tracking system correctly to minimize errors.</div>
-                                    <br><div class="icon"><i class="bi bi-check-circle-fill"></i> Offer an analytics module that identifies patterns and trends in attendance data, allowing for quick identification and resolution of any discrepancies.</div>
-                                    <!--<h3>Efficient Tracking</h3><----->
-                                </div>
-                              </div>                              
-                          </div>
-                      </div>
-                      <div class="tab-pane fade" id="tab-pane-2">
-                          <div class="row g-4">
-                            <!-- <div class="col-md-6" style="min-height: 350px;">
-                              <div class="position-relative h-100">
-                                  <img class="position-absolute rounded w-100 h-100" src="assets/img/solution-pic.png"
-                                      style="object-fit: cover;" alt="">
-                              </div>
-                            </div> -->
-                              <div class="col-md-12">
-                                <h4 class="title"><a href="">Access Control</a></h4>
-                                <div class="description" id="access-control">
-                                  <!---<h3>Access Control</h3>--->
-                                  <br><div class="icon"><i class="bi bi-check-circle-fill"></i> Utilize a secure login system with strong password requirements to ensure only authorized personnel can access the attendance tracking system.</div>
-                                  <br><div class="icon"><i class="bi bi-check-circle-fill"></i> Implement role-based access control to restrict access to sensitive data based on job roles and responsibilities.</div>
-                                  <br><div class="icon"><i class="bi bi-check-circle-fill"></i> Utilize encryption to secure attendance data both in transit and at rest to protect against unauthorized access.</div>
-                                </div>
-                              </div>
-                          </div>
-                      </div>
-                      <div class="tab-pane fade" id="tab-pane-3">
-                          <div class="row g-4">
-                            <!-- <div class="col-md-6" style="min-height: 350px;">
-                              <div class="position-relative h-100">
-                                  <img class="position-absolute rounded w-100 h-100" src="assets/img/solution-pic.png"
-                                      style="object-fit: cover;" alt="">
-                              </div>
-                            </div> -->
-                              <div class="col-md-12">
-                                <h4 class="title"><a href="">Real-time Tracking</a></h4>
-                                <div class="description" id="real-time-tracking">
-                                  <!---<h3>Real-time Tracking</h3>--->
-                                  <br><div class="icon"><i class="bi bi-check-circle-fill"></i> Provide automated notifications to remind employees of their upcoming shift and encourage timely arrival.</div>
-                                  <br><div class="icon"><i class="bi bi-check-circle-fill"></i> Use GPS tracking or location-based services to detect when an employee is late and automatically update the attendance record.</div>
-                                  <br><div class="icon"><i class="bi bi-check-circle-fill"></i> Give managers real-time access to attendance data so they can address tardiness issues promptly.</div>
-                                </div>
-                              </div>
-                          </div>
-                      </div>
-                      <div class="tab-pane fade" id="tab-pane-4">
-                          <div class="row g-4">
-                            <!-- <div class="col-md-6" style="min-height: 350px;">
-                              <div class="position-relative h-100">
-                                  <img class="position-absolute rounded w-100 h-100" src="assets/img/solution-pic.png"
-                                      style="object-fit: cover;" alt="">
-                              </div>
-                            </div> -->
-                              <div class="col-md-12">
-                                <h4 class="title"><a href="">Data Analytics</a></h4>
-                                <div class="description" id="data-analytics">
-                                  <!--<h3>Data Analytics</h3>--->
-                                  <br><div class="icon"><i class="bi bi-check-circle-fill"></i> Provide a dashboard that allows managers to monitor attendance data and analytics in real-time, helping them identify trends and patterns.</div>
-                                  <br><div class="icon"><i class="bi bi-check-circle-fill"></i> Utilize machine learning algorithms to predict attendance patterns and identify potential issues before they become a problem.</div>
-                                  <br><div class="icon"><i class="bi bi-check-circle-fill"></i> Offer customizable reports and dashboards that enable managers to analyze attendance data and gain insights into specific areas of interest.</div>
-                                </div>                                
-                              </div>
-                          </div>
-                      </div>
-                  </div>
-              </div>
-          </div>
-      </div>
-  </div>
-  <!-- Service End -->
+  </section>  
 
   <script>
     // Find all nav buttons
